2005-08-21  Youchen Lee <youchen.lee@gmail.com>

	* configure.ac,
	README: Set --enable-nancy as default.
	* TODO: Added severial todos.

2005-08-21  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/mainframe.cpp:
	Add a simple control menu to swich Nancy Bot on and off.
	Add a pane to status bar to indicate whether NancyBot is enabled.
	Add a pane to status bar displaying elapsed time.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/view/telnetcon.cpp,
	src/view/telnetcon.h: Fixed grep waterballs in ptts.
	Added static functions and vars to control with_nancy_support.
	Added functions to control use_nancy in run time.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/api.h: Now NancyBot::replaceString() could replace
	more than one strings.
	Added "NancyBot Settings HOWTO" in api.h.

	* src/nancy_bot/msgdata.h: Comment fixed.

2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/api.h,
	src/nancy_bot/msgdata.h: Fixed unclear variable and function names about
	"Bot Level".

	* data/nancy_bot/default_msg.data,
	data/nancy_bot/default.conf: Convert from big5 to utf-8.

	* src/view/telnetcon.cpp: Use SendString() to send utf-8 strings.

2005-08-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetcon.cpp: CTelnetCon::OnNewIncomingMessage now receives
	UTF-8 encoded strings as parameter.

2005-08-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termview.cpp,
	src/view/telnetview.cpp,
	src/mainframe.cpp,
	src/appconfig.cpp,
	src/generalprefpage.cpp:
	Greatly enhance hyperlink handling of the terminal screen.
	Now, E-mail addresses can be opened by mail client programs, 
	and telnet:// URLs can be opened directly in pcmanx by one click.
	(CTermView::OnHyperlinkClicked): Added and overriden by CTelnetView to 
	handle hyprelinks.

2005-08-15  Youchen Lee  <youchen.lee@gmail.com>
