@@ -11,7 +11,12 @@
 #include <map>
 #include <ctime>
 #include <vector>
-#include <string>
+#include <cstring>
+#include <sys/stat.h>
+#include <sys/types.h>
+#include <fcntl.h>
+#include <unistd.h>
+
 
 using namespace std;
 
@@ -34,7 +39,7 @@ class MsgData
 		bool writeUnknowLog();
 		int errorHandler(int, const string &);
 		int errorHandler(int, const string &, const string &);
-			
+		int my_copy(const string &old_path, const string &old_file, const string &new_path, const string &new_file);
 		
 		// STL
 		vector<string> V_MsgAngry;
