@@ -1,4 +1,15 @@
-2005-08-21  Youchen Lee <youchen.lee@gmail.com>
+2005=08-22  Youchen Lee  <youchen.lee@gmail.com>
+
+	* configure.ac: Added zh_CN.po ( Edited by Optical-dlz ).
+	
+	* src/nancy_bot/msgdata.cpp,
+	src/nancy_bot/msgdata.h: Added mkdir of ~/.pcmanx/nancy_bot/.
+	Added function my_copy(), but cause ld error.
+
+	* src/view/telnetcon.cpp: Changed nancy CONFIG_PATH to
+	~/.pcmanx/nancy_bot/ .
+
+2005-08-21  Youchen Lee  <youchen.lee@gmail.com>
 
 	* configure.ac,
 	README: Set --enable-nancy as default.
